--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react-simple-star-rating": "^4.0.5"
   },
   "devDependencies": {
+    "@types/node": "22.14.1",
+    "@types/react": "19.1.2",
     "eslint": "^8.9.0",
     "eslint-config-next": "12.0.10"
   }
