--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.4",
+    "@tanstack/react-query": "^5.74.3",
+    "@tanstack/react-query-devtools": "^5.74.3",
     "bulma": "^0.9.3",
     "next": "latest",
     "react": "^18.2.0",
@@ -15,6 +17,8 @@
     "react-simple-star-rating": "^4.0.5"
   },
   "devDependencies": {
+    "@types/node": "22.14.1",
+    "@types/react": "19.1.2",
     "eslint": "^8.9.0",
     "eslint-config-next": "12.0.10"
   }
