--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.4",
+    "@tanstack/react-form": "^1.5.0",
+    "@tanstack/react-query-devtools": "^5.74.4",
     "bulma": "^0.9.3",
     "next": "latest",
     "react": "^18.2.0",
